--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnections" : "Data source=fitness.db"
   },
+  "TokenKey" : "Super Secret Key",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
